3.5/mule-user-guide/datamapper-fixed-width-input-format.adoc
= DataMapper Example: Fixed-Width Input Format

Anypoint DataMapper can organize data into fixed-width columns, allowing for data extraction using the width value for each column.  Reading data in fixed-width format, DataMapper can separate the appropriate fields according to user-provided field length values (see example below).

This document illustrates two simple examples that map values from fixed-width data format to JSON.

* Where there are unused characters within a field, DataMapper applies padding. 

* Optionally, the input format may contain a header in the first line.

[source]
----
lastName~~~~~~firstName~~~~~~customerID~
Doe~~~~~~~~~~~John~~~~~~~~~~~41164794149
Doe~~~~~~~~~~~Jane~~~~~~~~~~~79251226021
----

== Assumptions

This document assumes the reader is familiar with the DataMapper Transformer. 

== Fixed-width to JSON Example Flow

The following image illustrates a very simple Mule flow which includes a DataMapper transformer.  The first building block, a link:/documentation/display/current/File+Connector[File Connector], reads the fixed-width input file. Then, DataMapper transforms the data into the JSON format, and outputs the result into a second file.

image:/documentation/download/attachments/123339464/flow.png?version=1&modificationDate=1421964706676[image]

To test the mapping, you can build this flow in Studio, then run the application and check the results in the output file. Alternatively, you can build this flow, then can use DataMapper's link:/documentation/display/current/Previewing+DataMapper+Results+on+Sample+Data[Preview] feature to view the mapping without running the application.

. Configure the values used for the file inbound and outbound connectors in the flow as per the following:
+
[width="100%",cols=",",options="header"]
|===
2+^|Inbound connector 
|Path |`/tmp/`
|File Name Regex Filter |`fwtest`
|===
+
[width="100%",cols=",",options="header"]
|===
2+^|Outbound connector 
|Path |`/tmp`
|File Name Regex Filter |`fwout.json`
|===

. Create a **Fixed-Width Input File**: create a new text file (.txt), then paste into it the following contents:
+

[source]
----
LastName  FirstName Phone      CountryEmployeeNo
Jane      Doe       54112223333ARG001
John      Doe       54112223333ARG002
----

. Save the file to a convenient location on your local drive. To see the DataMapper perform the transformation, you will eventually copy this file to `/tmp/fwtest`.

. Create the JSON sample file that that DataMapper uses as the template for converting data to JSON. Create the file and paste into it the following contents:

[source]
----
[{
  "FirstName": "",
  "LastName": "",
  "Phone": "",
  "Country": "",
  "EmployeeNo": ""
}]
----

=== Configuring DataMapper Input

. Double-click the DataMapper building block on the canvas to open the *New Data Mapping Flow* window. Enter a name for the data mapping flow, then click *Next*.
+
image:/documentation/download/attachments/123339464/DM_editor.png?version=1&modificationDate=1422290240251[image]

. DataMapper display the *Select Input and Output Type* window.
. In the *Input* section, use the *Type* drop-down menu to select `Fixed Width`. The window's *Input* section displays the input options for the fixed-width format, as shown below.
image:/documentation/download/attachments/123339464/edit_icon.png?version=1&modificationDate=1422290440879[image] next to the *Type* input field, then select *Fixed Width* from the *Type* drop-down menu. The properties editor *Input* pane displays the input options for the fixed-width format, as shown below.
+
image:/documentation/download/attachments/123339464/3.fixedw_options.png?version=1&modificationDate=1422290627369[image]

. The default option, *From Example*, allows you to use an input file for determining input field properties (field names and width). The *User Defined* option allows you to manually define the input fields. In this example, we will use the input file described link:#DataMapperFixedWidthInputFormat-fixed[above] so that DataMapper automatically configures the fields.

. Use the ellipses button (...) next to the *Fixed width* field to select the fixed-width input file on your local drive (alternatively, you can type the full path to the file in the *Path to Fixed Width File* input field).

. After you have selected your input file, click *Edit Fields*. DataMapper displays the *Define the Fixed Width* panel. The image below illustrates how DataMapper reads the input file.  DataMapper has correctly guessed the width of all fields, and the names of the first three fields. The last two fields have the correct width values, but we must edit the names.
+
image:/documentation/download/attachments/123339464/fixed_width_input.png?version=1&modificationDate=1421964706671[image]

. To edit a field, click the field attribute you wish to edit (the name, type or width), then adjust the content and click *OK*.  For this example, change the names of the last two fields to their appropriate values:  `Country` and `EmployeeNo`.
+
image:/documentation/download/attachments/123339464/props5.png?version=1&modificationDate=1421964706792[image]

[TIP]
====
DataMapper accepts several input field types, including string, date, boolean, etc. To define the type for a field, click the field's type and select the desired type from the drop-down menu.

image:/documentation/download/thumbnails/123339464/propstip.png?version=1&modificationDate=1421964706804[image]
====

=== Configuring DataMapper Output

. In the *Output* section of the *Input and Output Type* window, use the drop-down menu next to *Type* to select `JSON`.

. Use the ellipses button (...) next to the *Fixed width example* field to select the JSON output file on your local drive.
+
[TIP]
====
If you want DataMapper to automatically generate the output JSON, click *Generatedefault* in the *Output* section of the *New Data Mapping Flow* window.
====

. Click *Finish* to close the DataMapper wizard.  Studio displays the data mapping in the Data Mapping console (see image below).
+
image:/documentation/download/attachments/123339464/4.DM_mapedit.png?version=1&modificationDate=1422291212174[image]

=== Testing the Mapping

To test the mapping, use one of the following procedures.

[tabs]
------
[tab,title="Run Application"]
....
Test by running the example flow:

. Right-click the project name in the Package Explorer, then select  *Run as* > *Mule Application*.

. Copy your fixed-width input file to the directory and filename you specified for the File inbound connector (in this example, `/tmp/fwtest`).

. Check for the example output file according to the configuration of the outbound file connector (in this example, `/tmp/fwout.json`.
....
[tab,title="See Preview"]
....
DataMapper's link:/documentation/display/current/Previewing+DataMapper+Results+on+Sample+Data[Preview] feature allows you to see the result of your mapping without actually running the flow. Test by using DataMapper's Preview feature:

. In the DataMapper view, click the *Preview* tab.

. In the *Preview* tab, click *Run*.
....
------

The code below demonstrates the resulting JSON output.

[source]
----
[{
  "FirstName" : "Doe",
  "LastName" : "Jane",
  "Phone" : "54112223333",
  "Country" : "ARG",
  "EmployeeNo" : "001"
}, {
  "FirstName" : "Doe",
  "LastName" : "John",
  "Phone" : "54112223333",
  "Country" : "ARG",
  "EmployeeNo" : "002"
}]
----


== Using Fixed-Width Column Definitions to Extract Additional Fields

In this additional example, we split an employee's phone number, originally comprised of 11 digits, into three separate fields:

* `CountryCode`

* `AreaCode`

* `PhoneNo`

To do this in the DataMapper building block you configured for the previous example, complete the instructions in the following sections.

== Modifying Input and Output Properties

. Double-click each individual field in the input panel to edit the attribute properties. Edit the displayed fields according to the following table:
+
[cols=",",options="header"]
|===
|Name |Type |Width
|LastName	|string	|10
|FirstName	|string	|10
|PhoneNo	|string	|7
|Country |string	|3
|EmployeeNo	|string	|3
|===
+

. Right-click the file name in the input panel, then select Add Field.
. Add the fields according to the following table:
+

[cols=",",options="header"]
|===
|Name	|Type	|Width
|CountryCode	|string	|2
|AreaCode	|string	|2
|===
+

. Right-click the field, then select the *Move Field Up* to move each of the new fields to the appropriate position, so that, in descending order, the fields appear thus:  LastName, FirstName, CountryCode, AreaCode, PhoneNo, Country, EmployeeNo.
. Double-click each individual field in the output panel to edit the attribute properties; right click the file name in the output panel. Edit and add output fields according to the following table:

[cols=",",options="header"]
|===
|Name |Type
|LastName	|string
|FirstName	|string
|CountryCode	|string
|AreaCode	|string
|Phone	|string
|Country	|string
|EmployeeNo	|string
|===

The image below shows the DataMapper view after modifying the input and output properties.

image:/https://developer.mulesoft.com/docs/download/attachments/122750756/image2013-4-13+19%3A50%3A26.png?version=1&modificationDate=1421449790553[image]

=== Testing the Mapping

As with the previous example, test the mapping by either running the application and generating an output file, or by using DataMapper's Preview feature.  The code below demonstrates the resulting JSON output.  DataMapper has split the original `Phone` field into the fields `CountryCode`, `AreaCode` and `Phone`. DataMapper performed field splitting according to the lengths and field order provided in the Input Properties, and mapped them to the JSON format specified in the Output Properties.

[source]
----
[ {
  "LastName" : "Jane",
  "FirstName" : "Doe",
  "CountryCode" : "54",
  "AreaCode" : "11",
  "Phone" : "2223333",
  "Country" : "ARG",
  "EmployeeNo" : "001"
}, {
  "LastName" : "John",
  "FirstName" : "Doe",
  "CountryCode" : "54",
  "AreaCode" : "11",
  "Phone" : "2223333",
  "Country" : "ARG",
  "EmployeeNo" : "002"
} ]
----
